--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,61 +1,43 @@
 server:
-  port: 8888
+  port: 8084
+  #forward-headers-strategy: framework
   #port: 0
 springdoc:
   version: v1
-  description: BBCron User
+  description: BBCron Teams
   api-docs:
     path: /api-docs
 
+## Configuring info endpoint
+info:
+  app:
+    name: BBCron Teams
+    description: Handle teams in BBCron
+    version: 1.0.0
+
+
 spring:
   application:
-    name: bbcron_user_service
-  jpa:
-    hibernate:
-      default_schema: ${DEFAULT_ACLS_SCHEMA:bbcron}
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
-      ddl-auto: vaidate
-  datasource:
-    #url: ${USER_BBDD:jdbc:postgresql://localhost:5432/bbcron?currentSchema=bbcron_user}
-    url: ${USER_BBDD:jdbc:postgresql://localhost:5432/bbcron_user}
-    username: ${POSTGRES_DB:bbcron}
-    password: ${POSTGRES_PASSWORD:bbcron}
-    ## default connection pool
-    hikari:
-      connectionTimeout: 20000
-      maximumPoolSize: 5
-  flyway:
-    enabled: true
-    baseline-on-migrate: true
-    user: ${POSTGRES_USER:bbcron}
-    password: ${POSTGRES_PASSWORD:bbcron}
-    #schemas: ${POSTGRES_DB:bbcron_user}
+    name: bbcron_teams_service
+  data:
+    mongodb:
+      database: bbcron
+      port: 27017
+      host: localhost
+  
+# GET ENDPOINTS
+management:
+  endpoints:
+    web:
+      exposure:
+        include: mappings, info, health, metrics, loggers
+logging:
+  level:
+    org:
+      springframework:
+        data:
+          mongodb:
+            core:
+              MongoTemplate: ERROR
 
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: ${EUREKA_URI:http://localhost:8765/eureka}
-  instance:
-    preferIpAddress: true
 
-postgresql:
-  url: ${POSTGRESQL_URL:192.168.1.45}
-  port: ${POSTGRESQL_PORT:5432}
-  dbName: ${POSTGRESQL_DBNAME:bbcron-user}
-  user: ${POSTGRESQL_USER:bbcron}
-  pwd: ${POSTGRESQL_PWD:bbcron}
-
-keycloak:
-  auth-server-url: http://localhost:8180/auth
-  realm: bbcron
-  resource: bbcron-user
-  public-client: true
-  bbcron:
-    client-id: bbcron-client
-    client-secret: c3e9cc84-c446-441e-a0fa-f76813856ab2
-    username: bbcron
-    password: bbcron
-    organization: ${default_organization:ORGANIZATION_DEFAULT}
-    requiredActions: "Verify Email"
