--- a/pom.xml
+++ b/pom.xml
@@ -13,8 +13,7 @@
 
 	<scm>
 		<connection>scm:git:https://github.com/3nauk/bbcron-team-service</connection>
-		<developerConnection>scm:git:https://github.com/3nauk/bbcron-team-service
-    </developerConnection>
+		<developerConnection>scm:git:https://github.com/3nauk/bbcron-team-service</developerConnection>
 		<url>https://github.com/3nauk/bbcron-team-service</url>
 	</scm>
 
@@ -34,12 +33,12 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.2.4.RELEASE</version>
+		<version>2.5.6</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 
 	<properties>
-		<spring-cloud.version>Hoxton.SR1</spring-cloud.version>
+		<spring-cloud.version>2020.0.3</spring-cloud.version>
 		<springdoc.version>1.2.32</springdoc.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -48,7 +47,6 @@
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<encoding>UTF-8</encoding>
-		<junit-jupiter.version>5.5.2</junit-jupiter.version>
 		<sonar.jacoco.reportPath>target/coverage-reports/jacoco-ut.exec</sonar.jacoco.reportPath>
 		<sonar.junit.reportPaths>target/surefire-reports</sonar.junit.reportPaths>
 		<sonar.sources>src/main</sonar.sources>
@@ -145,7 +143,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-mongodb</artifactId>
 		</dependency>
-
+		<dependency>
+    		<groupId>de.flapdoodle.embed</groupId>
+    		<artifactId>de.flapdoodle.embed.mongo</artifactId>
+    		<scope>test</scope>
+		</dependency>
 		<!-- mapstruct -->
 		<dependency>
 			<groupId>org.mapstruct</groupId>
@@ -175,30 +177,31 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+    		<groupId>org.springframework.cloud</groupId>
+    		<artifactId>spring-cloud-starter-contract-stub-runner</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+        	<groupId>com.bnauk.bbcron</groupId>
+        	<artifactId>bbcron-user-service</artifactId>
+        	<classifier>stubs</classifier>
+        	<version>1.0.0-SNAPSHOT</version>
+        	<scope>test</scope>
+    	</dependency>
+		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-zipkin</artifactId>
+			<version>2.2.8.RELEASE</version>
 		</dependency>
 		<!-- Test -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
-			<exclusions>
-				<exclusion>
-					<groupId>org.junit.vintage</groupId>
-					<artifactId>junit-vintage-engine</artifactId>
-				</exclusion>
-			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-core</artifactId>
-			<scope>test</scope>
-		</dependency>
-		<!-- junit 5 -->
-		<dependency>
-			<groupId>org.junit.jupiter</groupId>
-			<artifactId>junit-jupiter-engine</artifactId>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -212,17 +215,8 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.junit.vintage</groupId>
-			<artifactId>junit-vintage-engine</artifactId>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
-		</dependency>
-		<dependency> 
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-zipkin</artifactId>
 		</dependency>
 	</dependencies>
 	<dependencyManagement>
@@ -238,7 +232,7 @@
 	</dependencyManagement>
 	<build>
 		<plugins>
-			<!-- direct usage: https://github.com/jeluard/maven-plantuml-plugin mvn 
+			<!-- direct usage: https://github.com/jeluard/maven-plantuml-plugin mvn
 				clean com.github.jeluard:plantuml-maven-plugin:generate -DGRAPHVIZ_DOT=PATH_DOT_BIN\dot.exe -->
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
@@ -266,7 +260,9 @@
 				</dependencies>
 			</plugin>
 			<plugin>
-				<artifactId>maven-surefire-plugin</artifactId>
+				<groupId>org.apache.maven.plugins</groupId>
+    			<artifactId>maven-surefire-plugin</artifactId>
+    			<version>2.19.1</version> <!-- Specific due to memory leak in 2.20 -->
 				<dependencies>
 					<dependency>
 						<groupId>org.junit.platform</groupId>
@@ -317,6 +313,17 @@
 				<configuration>
 					<xmlOutput>true</xmlOutput>
 					<failOnError>false</failOnError>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.springframework.cloud</groupId>
+				<artifactId>spring-cloud-contract-maven-plugin</artifactId>
+				<version>3.0.3</version>
+				<extensions>true</extensions>
+				<configuration>
+					<baseClassForTests>
+						com.bbcron.team.contract.TeamProducerTest
+					</baseClassForTests>
 				</configuration>
 			</plugin>
 			<!--plugin>
