--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,17 +1,20 @@
 repos:
--   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v2.3.0
-    hooks:
-    -   id: check-yaml
-    -   id: end-of-file-fixer
-    -   id: trailing-whitespace
--   repo: https://github.com/psf/black
-    rev: 19.3b0
-    hooks:
-    -   id: black
--   repo: https://github.com/ejba/pre-commit-maven
-    rev: v0.3.2
-    hooks:
-    -   id: maven
-        args: ['clean compile']
-    -   id: maven-spotless-apply
+  # general hooks
+  -   repo: https://github.com/pre-commit/pre-commit-hooks
+      rev: v2.3.0
+      hooks:
+        -   id: check-yaml
+        -   id: end-of-file-fixer
+        -   id: trailing-whitespace
+  # formatting
+  -   repo: https://github.com/macisamuele/language-formatters-pre-commit-hooks
+      rev: v2.2.0
+      hooks:
+        -  id: pretty-format-java
+           args: [--autofix]
+  # maven build and test
+  -   repo: https://github.com/ejba/pre-commit-maven
+      rev: v0.3.2
+      hooks:
+        -   id: maven-compile
+        -   id: maven-test
